test/zinc_source/compile_errors/modules/_cycle/b.zn
import compile_errors/modules/_cycle/a

fn pong() {
    return 2
}
